--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="create_folder">Create Folder</string>
     <string name="set_name">Set name...</string>
     <string name="ok">Ok</string>
+    <string name="select_all">Select All</string>
+    <string name="open">Open</string>
 </resources>
